Bug#19745: mysqldump --xml produces invalid xml

The mysqldump command with both the --xml and --hex-blob options will output blob data encoded as hexBinary.  
The proper XML datatype is xs:hexBinary.  
The correct XML datatype is specified be setting the xsi_type attribute equal to xs:hexBinary for each encoded element.